<resources>
    <string name="app_version">Version 1 by TCODNG Team</string>
    <string name="app_name">PortaLang</string>
    <string name="app_desc">Help You Find The Missing People</string>
    <string name="app_started_menu">Help You Find The Missing People</string>
    <string name="help_you_find">Help You Find</string>
    <string name="the_missing_people"> The Missing People</string>
    <string name="login_btn">SIGN IN</string>
    <string name="loading_btn">LOADING …</string>
    <string name="no_username">Fill your Username</string>
    <string name="no_email">Fill your Email</string>
    <string name="no_password">Fill your Password</string>
    <string name="no_name">Fill your Name</string>
    <string name="no_bio">Fill your Biotdata</string>
    <string name="no_email_pw">Fill your Email and Password</string>
    <string name="wrong_pw">PASSWORD NOT MATCH!</string>
    <string name="error_em">Invalid email address</string>
    <string name="error_ed">You need to fill all data</string>
    <string name="regist_btn">NEW ACCOUNT</string>
    <string name="prompt_exit_back_pressed"> PRESS TWICE FOR EXIT APP</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="complete_btn">COMPLETE</string>
    <string name="finish_btn">DASHBOARD</string>
    <string name="share_btn">Share to Friends</string>
    <string name="newaccount_label">Create New Account</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Your Username</string>
    <string name="forgot_pass_title">Forgot Password</string>
    <string name="repassword_label">Re-Password</string>
    <string name="password_hint">Your Password</string>
    <string name="email_label">Email</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="register_menu_title">Create New Account</string>
    <string name="register_menu_secondary">Please fill up the forms below for informations</string>
    <string name="register2_menu_title">Lets take a picture</string>
    <string name="register2_menu_secondary">We know you are handsome and beauty person then lets add pict</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Your Name</string>
    <string name="passion_label">Bio</string>
    <string name="passion_hint">Your Bio</string>
    <string name="success_menu_title">You are Great!</string>
    <string name="success_menu_secondary">Welcome to PortaLang  Fams, lets be part of social now and forever!</string>
    <string name="success_menu_launch">Launch</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="mainmenu_title">Main Menu</string>
    <string name="mainmenu_desc">Did you lose people ?</string>
    <string name="btn_yes">YES</string>
    <string name="card_portal">Portal</string>
    <string name="card_report">Report</string>
    <string name="card_found">Found</string>
    <string name="tv_hot">Hot</string>
    <string name="tv_news"> News!</string>
    <string name="tv_portal">Portal Of The Missing People</string>
    <string name="btn_agreements">Agreements</string>

    <string name="tv_found_missing_ppl">Have you found the missing person?</string>
    <string name="btn_offcourse">Yes, of course</string>
    <string name="found_missing_ppl_title">Found The Missing People</string>
    <string name="found_tv_photos">Missing People Photos</string>
    <string name="tv_missname">Missing People Name</string>
    <string name="tv_yourname">Your Name</string>
    <string name="tv_dateofbirth">Date Of Birth</string>
    <string name="tv_location">Locations found miss-People</string>
    <string name="tv_phone">Your Phone Number</string>
    <string name="ed_hover_date">DD/MM/YYYY</string>
    <string name="btn_calendar">Calendar</string>
    <string name="ed_hover_address">Input Address</string>
    <string name="btn_maps">Maps</string>
    <string name="tv_chronology">Chronology Invented</string>
    <string name="tv_success_senddata_title">Sent Data Successfully!</string>
    <string name="tv_success_senddata_desc">Thank you for sending us the missing persons data! we will check and post it soon.</string>
    <string name="tv_report_missing_ppl">Would you like to report that you lost someone?</string>
    <string name="report_missing_ppl_title">Report The Missing People</string>
    <string name="card_missing_ppl_photos">The Missing People Photos</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_send">SEND REPORT</string>
    <string name="card_missing_ppl_attach">Attachment of police report evidence (PDF)</string>
    <string name="whistleblower_address">Whistleblower Address</string>
    <string name="characteristic">Characteristic Feautures</string>
    <string name="agreements">I agree to Portalang application policies from the moment I create an account, report missing people and find missing people. including the data I send. the data that I send is true and there are no lies, and the user is ready to be prosecuted if there is any loss or misuse of data. Then it wont sue the developer no matter what. the developer will not abuse the data that has been sent.</string>
    <string name="aggreements_accept">I Accept User Agreements</string>
    <string name="btn_form_data">FILL FORM DATA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="featured">Unggulan</string>
    <string name="missing_ppl_card_title">Missing People</string>
    <string name="missing_ppl_card_desc">Report missing people, Fill missing people data</string>
    <string name="about_title">About</string>
    <string name="about_desc">Informasi pengembang dan profile</string>
    <string name="action_settings">Settings</string>
    <string name="indo">Indonesia Langguage</string>
    <string name="eng">English Langguage</string>
    <string name="settings">Settings</string>
    <string name="restartapp">Please Restart App!</string>
    <string name="restartbtn">RESTART APP</string>
    <string name="themeapp">Theme App</string>
    <string name="langguage">Langguage</string>
    <string name="langguage_desc">Change application langguage</string>
    <string name="themeapp_desc">Change your Theme App</string>
    <string name="settings_desc">Customize your application, as you feel like and enjoy</string>
    <string name="settings_theme">App Theme</string>
    <string name="settings_darkmode_desc">Dark Mode</string>
    <string name="settings_lightmode">Light Mode</string>
    <string name="hello">Hello, </string>
    <string name="goodmorning">Good Morning</string>
    <string name="goodnight">Good Night</string>
    <string name="goodafternoon">Good Afternoon</string>
    <string name="goodevening">Good Evening</string>


    <string name="welcome_adapter_title">Welcome Into PortaLang!</string>
    <string name="welcome_adapter_title2">We Help You</string>
    <string name="welcome_adapter_title3">Building Community </string>
    <string name="welcome_adapter_title4">FINALLY!</string>
    <string name="welcome_adapter_sub">The Portal of Missing People</string>
    <string name="welcome_adapter_sub2">For getting missing people infos</string>
    <string name="welcome_adapter_sub3">Join community and help others</string>
    <string name="welcome_adapter_sub4">Lets get Started</string>


    <string name="no_internet_title">Couldnt connect to Internet</string>
    <string name="no_internet_titlee">Please check your network Settings.</string>
    <string name="retry_btn">RETRY</string>


    <string name="sweet_exit_dialog_title">Hello, </string>
    <string name="sweet_exit_dialog_body">Are you sure to Sign out ?</string>
    <string name="sweet_exit_dialog_confirm">Sign out</string>
    <string name="sweet_understand">Understand</string>
    <string name="sweet_exit_dialog_cancel">Cancel</string>
    <string name="sweet_loading">Loading …</string>
    <string name="sweet_uploading">Uploading data …</string>
    <string name="sweet_signin">Sign in …</string>
    <string name="sweet_regist">Register account …</string>
    <string name="login_ok">Login Success</string>
    <string name="login_fail">Login Failed</string>
    <string name="no_db">No Database found!</string>
    <string name="missing">MISSING</string>
    <string name="portalnews">Portal News</string>
    <string name="invalid_data">Invalid data!</string>
    <string name="username_already">Already username</string>
    <string name="email_already">Already email</string>
    <string name="miss">Missing</string>
    <string name="found">Found</string>
    <string name="back">Back</string>
    <string name="print_success">Saved on DCIM folder!</string>
    <string name="loading_reg">LOADING…</string>
    <string name="upload_reg">UPLOADING…</string>
    <string name="pleasewait_reg">PLEASE WAIT…</string>
    <string name="update_reg">UPDATING…</string>
    <string name="no_photos">No photo chosen</string>
    <string name="your_pw">Your Password is : </string>
    <string name="cekpw">Check your password</string>
    <string name="people">PEOPLE</string>
    <string name="share_tv">Hey there! Iam using PortaLang for searching Missing People. You can download PortaLang on PlayStore!</string>


    <string name="sweet_missing_title">Requirements to activate Face Recognition, the missing people photo must have a clear and red background then System can do Recognition</string>
    <string name="alert_found_title">Hello, </string>
    <string name="alert_found_desc">If you dont know the missing persons data, you can fill in the data carelessly</string>
</resources>