<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".UserReportFoundingC">

    <io.github.florent37.shapeofview.shapes.ArcView
        app:shape_arc_height="50dp"
        app:shape_arc_position="bottom"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_gradient_primary_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </io.github.florent37.shapeofview.shapes.ArcView>

    <ImageView
        android:id="@+id/icon_illu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/illu_ciank_sentdata"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/mbold"
        android:text="@string/tv_success_senddata_title"
        android:textColor="@color/blackPrimary"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_illu" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="@string/tv_success_senddata_desc"
        android:textColor="@color/greyPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/finish_btn"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

    <TextView
        android:background="@drawable/btn_green_primary"
        android:id="@+id/btn2"
        android:padding="6dp"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/share_btn"
        android:textColor="@color/whiteAbsolute"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

</androidx.constraintlayout.widget.ConstraintLayout>