<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted">

    <ImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/getstarted_background"
        />
    <View
        android:id="@+id/get_started_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_overlay_getstarted"/>

    <TextView
        android:id="@+id/porta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mmedium"
        android:text="Porta"
        android:textColor="@color/whiteAbsolute"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mbold"
        android:text="Lang"
        android:textColor="@color/bluePrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/porta"
        app:layout_constraintStart_toEndOf="@+id/porta"
        app:layout_constraintTop_toTopOf="@+id/porta" />

    <ImageView
        android:id="@+id/icon_illu_search"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:scaleType="fitCenter"
        android:src="@drawable/illu_ciank_search"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/mbold"
        android:lineSpacingExtra="3dp"
        android:text="@string/help_you_find"
        android:textColor="@color/whiteAbsolute"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/mbold"
        android:lineSpacingExtra="3dp"
        android:text="@string/the_missing_people"
        android:textColor="@color/whiteAbsolute"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/login_btn"
        android:textColor="@color/btn_blue_primary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/regist_btn"
        android:textColor="@color/btn_blue_primary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/app_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/app_version"
        android:textColor="@color/blackPrimary"
        android:textSize="12sp"
        android:fontFamily="@font/mlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>