<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".NoInternet">

    <io.github.florent37.shapeofview.shapes.ArcView
        app:shape_arc_height="50dp"
        app:shape_arc_position="bottom"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_gradient_primary_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </io.github.florent37.shapeofview.shapes.ArcView>
    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/icon_illu"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/illu_no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/mregular"
        android:text="@string/no_internet_title"
        android:textColor="@color/blackPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_illu" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/mlight"
        android:gravity="center"
        android:lineSpacingExtra="9dp"
        android:text="@string/no_internet_titlee"
        android:textAlignment="center"
        android:textColor="@color/greyPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/retry_btn"
        android:textColor="#fff"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/share_btn"
        android:textColor="@color/greyPrimary"
        android:textSize="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>