<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".UserLogin">

    <TextView
        android:id="@+id/porta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/mmedium"
        android:text="Sign"
        android:textColor="@color/blackPrimary"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/login_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mbold"
        android:text="In"
        android:textColor="@color/bluePrimary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/porta"
        app:layout_constraintStart_toEndOf="@+id/porta"
        app:layout_constraintTop_toTopOf="@+id/porta" />

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/mmedium"
        android:text="Fill your account data"
        android:textColor="@color/blackPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_rounded_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/username_label"
                android:textColor="@color/greyPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_ed_selector"
                android:fontFamily="@font/mmedium"
                android:inputType="text"
                android:lineSpacingExtra="2sp"
                android:lines="1"
                android:padding="12dp"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/password_label"
                android:textColor="@color/greyPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_ed_selector"
                android:fontFamily="@font/mmedium"
                android:inputType="textPassword"
                android:lineSpacingExtra="2sp"
                android:lines="1"
                android:padding="12dp"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/btn_blue_primary"
            android:fontFamily="@font/mmedium"
            android:text="@string/login_btn"
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/mbold"
            android:text="@string/newaccount_label"
            android:textColor="@color/bluePrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        <TextView
            android:id="@+id/forgot_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22sp"
            android:layout_marginBottom="12sp"
            android:fontFamily="@font/mlight"
            android:text="@string/forgot_pass_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />

</androidx.constraintlayout.widget.ConstraintLayout>